# project-tarot

./: .editorconfig  .gitattributes  .gitignore  CODE-OF-CONDUCT.md  README.md  index.html  package.json  pnpm-lock.yaml
sample_data/: NASDAQ-AMD.csv  NASDAQ-AMZN.csv  NASDAQ-APPL.csv  NASDAQ-CSCO.csv  NASDAQ-META.csv  NASDAQ-MSFT.csv  NASDAQ-NFLX.csv  NASDAQ-QCOM.csv  NASDAQ-SBUX.csv  NASDAQ-TSLA.csv  README.md
src/: App.tsx  main.tsx  theme.ts
src-tauri/: Cargo.toml  openblas.lib  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/lib/: event.rs  mod.rs  typedef.rs
src-tauri/src/lib/data/: command.rs  mod.rs
src-tauri/src/lib/evaluate/: command.rs  event.rs  helper.rs  mod.rs  typedef.rs
src-tauri/src/lib/preprocess/: command.rs  helper.rs  mod.rs  typedef.rs
src-tauri/src/lib/train/: command.rs  event.rs  helper.rs  mod.rs  model.rs  typedef.rs
src/components/: ErrorDialog.tsx  Titlebar.tsx
src/pages/: Data.tsx  Evaluate.tsx  Preprocess.tsx  Train.tsx
