[package]
name = "project-tarot"
version = "1.0.0"
description = "Simple implementation of LSTM with GUI"
authors = ["Athaariq A. Ramadhani <foss@athaariq.my.id>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "project_tarot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib/mod.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.47.1", features = ["time"] }
chrono = { version = "0.4.41", features = ["serde"] }
rand = "0.9.2"
tauri-plugin-dialog = "2"
calamine = { version = "0.30.0", features = ["chrono", "dates"] }
csv = "1.3.1"
strum_macros = "0.27.2"
strum = { version = "0.27.2", features = ["derive", "strum_macros"] }
parse_datetime = "0.11.0"
burn = { version = "0.18.0", features = [
	"std",
	"autodiff",
	"fusion",
	"ndarray",
	"openblas-system",
	"simd",
	"default",
] }
rsl-interpolation = { version = "0.1.9", features = ["openblas-system"] }
